@@ -3,7 +3,7 @@ package com.berrekate.service.impl;
 import com.berrekate.dto.HotelDTO;
 import com.berrekate.entities.Hotel;
 import com.berrekate.berrekate_repository.HotelRepository;
-import com.berrekate.service.I_HotelService;
+import com.berrekate.service.IHotelService;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
@@ -11,7 +11,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 //Implementation des services de l'Hotel class avec l'utilisation du DTO mapping
 @Service
-public class HotelServiceImpl implements I_HotelService {
+public class HotelServiceImpl implements IHotelService {
 
     private final HotelRepository hotelRepository;
     private final ModelMapper modelMapper;
@@ -30,11 +30,12 @@ public class HotelServiceImpl implements I_HotelService {
 
         return hotels.stream()
                 .map(hotel -> modelMapper.map(hotel, HotelDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+
     @Override
-    public HotelDTO getHotelById(int id) {
+    public HotelDTO getHotelById(long id) {
         Hotel hotel = hotelRepository.findById(id).orElse(null);
         return modelMapper.map(hotel, HotelDTO.class);
 
@@ -45,22 +46,23 @@ public class HotelServiceImpl implements I_HotelService {
         return modelMapper.map(hotelRepository.save(modelMapper.map(hotel, Hotel.class)), HotelDTO.class);
     }
 
-
     @Override
-    public void updateHotel(HotelDTO hotel, int id) {
+    public void updateHotel(HotelDTO hotel, long id) {
         Hotel hotel1 = hotelRepository.findById(id).orElse(null);
         if (hotel1 != null) {
-            hotel1.setName(hotel.getNom());
-            hotel1.setAddress(hotel.getAddress());
-            hotel1.setTelephone(hotel.getPhone());
-            hotel1.setEmail(hotel.getEmail());
+            hotel1.setNomHotel(hotel.getNomHotel());
+            hotel1.setAddressHotel(hotel.getAddressHotel());
+            hotel1.setVille(hotel.getVille());
             hotel1.setDescription(hotel.getDescription());
-            modelMapper.map(hotelRepository.save(hotel1), HotelDTO.class);
+            hotel1.setTeleHotel(hotel.getTeleHotel());
+            hotel1.setStartHotel(hotel.getStartHotel());
+            hotel1.setStartHotel(hotel.getStartHotel());
         }
     }
 
+
     @Override
-    public void deleteHotel(int id) {
+    public void deleteHotel(long id) {
         hotelRepository.deleteById(id);
     }
 
@@ -68,7 +70,7 @@ public class HotelServiceImpl implements I_HotelService {
     public List<HotelDTO> getHotelsByVille(String ville) {
         List<Hotel> hotels = hotelRepository.findByVille(ville);
         return hotels.stream()
-                .map(hotel -> modelMapper.map(hotel, HotelDTO.class)).collect(Collectors.toList());
+                .map(hotel -> modelMapper.map(hotel, HotelDTO.class)).toList();
 
     }
 
