@@ -3,14 +3,13 @@ package com.berrekate.service.impl;
 import com.berrekate.berrekate_repository.StadeRepository;
 import com.berrekate.dto.StadeDTO;
 import com.berrekate.entities.Stade;
-import com.berrekate.service.I_StadeService;
+import com.berrekate.service.IStadeService;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 @Service
-public class StadeServiceImpl implements I_StadeService {
+public class StadeServiceImpl implements IStadeService {
 
     private final StadeRepository stadeRepository;
     private final ModelMapper modelMapper;
@@ -20,14 +19,14 @@ public class StadeServiceImpl implements I_StadeService {
         this.modelMapper = modelMapper;
     }
     @Override
-    public StadeDTO getStadeById(Long id) {
+    public StadeDTO getStadeById(long id) {
         Stade stade = stadeRepository.findById(id).get();
         return modelMapper.map(stade, StadeDTO.class);
     }
 
     @Override
     public StadeDTO getStadeByName(String name) {
-        Stade stade = stadeRepository.getStadeByNom(name);
+        Stade stade = stadeRepository.getStadeByNomStade(name);
         return modelMapper.map(stade, StadeDTO.class);
     }
 
@@ -45,19 +44,17 @@ public class StadeServiceImpl implements I_StadeService {
         List<Stade> stades = stadeRepository.findAll();
         return stades.stream()
                 .map(stade -> modelMapper.map(stade, StadeDTO.class))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<StadeDTO> getAllStadesByVille(String ville) {
-        List<Stade> stades = stadeRepository.getStadesByVille(ville);
-        return stades.stream()
-                .map(stade -> modelMapper.map(stade, StadeDTO.class))
-                .collect(java.util.stream.Collectors.toList());
+    public StadeDTO getAllStadeByVille(String ville) {
+        Stade stade = stadeRepository.getStadeByVilleNomVille(ville);
+        return modelMapper.map(stade, StadeDTO.class);
     }
 
     @Override
-    public boolean deleteStade(Long id) {
+    public boolean deleteStade(long id) {
          return stadeRepository.deleteByIdStade(id);
 
     }
@@ -66,14 +63,12 @@ public class StadeServiceImpl implements I_StadeService {
     public StadeDTO updateStade(StadeDTO stadeDTO) {
         Stade stade = stadeRepository.findById(stadeDTO.getIdStade()).orElse(null);
         if (stade != null) {
-            stade.setNom(stadeDTO.getNom());
-            stade.setVille(stadeDTO.getVille());
+            stade.setNomStade(stadeDTO.getNomStade());
+            stade.setAddressStade(stadeDTO.getAddressStade());
             stade.setDescription(stadeDTO.getDescription());
-            stade.setLongitude(stadeDTO.getLongitude());
-            stade.setLatitude(stadeDTO.getLatitude());
-            stade.setAddress(stadeDTO.getAddress());
+            stade.setCapacityStade(stadeDTO.getCapacityStade());
+            stade.setVille(stadeDTO.getVille());
             stade = stadeRepository.save(stade);
-
         }
         return modelMapper.map(stade, StadeDTO.class);
     }
